[gd_scene load_steps=2 format=3 uid="uid://bql5alu0o0mw6"]

[ext_resource type="Script" path="res://visualfs/Test/test_popup_input.gd" id="1_w8fqa"]

[node name="TestPopupInput" type="Node2D"]
script = ExtResource("1_w8fqa")

[node name="Button" type="Button" parent="."]
offset_left = 600.0
offset_top = 1000.0
offset_right = 800.0
offset_bottom = 1050.0
text = "Button"

[node name="Button2" type="Button" parent="."]
offset_left = 600.0
offset_top = 1100.0
offset_right = 800.0
offset_bottom = 1150.0
text = "Popup"

[node name="Button3" type="Button" parent="."]
offset_left = 600.0
offset_top = 1200.0
offset_right = 800.0
offset_bottom = 1250.0
text = "Button"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
